--- a/about.html
+++ b/about.html
@@ -461,7 +461,7 @@
 							<div class="testimonial-author mb-5">
 								<img src="images/client/nur straits.png" alt="Image" class="img-fluid">
 								<strong class="d-block">Pebri Hery, MT</strong>
-								<span>Owmer, Nur Straits Engineering</span>
+								<span>Owner, Nur Straits Engineering</span>
 							</div>
 							<blockquote>
 								I was impressed with the high quality of work performed as well as the conscientious and timely manner in which tasks were completed. NDS was there for us every step of the way providing creative and practical solutions to overcome each obstacle that lay in our path during the project
@@ -501,98 +501,39 @@
 
 	<div class="section client">
 		<div class="container">
-		  <div class="client-logo-slider align-self-center">
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-1.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-2.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-4.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-5.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-6.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-7.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-8.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-9.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-10.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-11.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-12.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-13.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-14.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-15.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-16.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-17.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-18.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-19.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-20.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-21.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-22.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-23.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-24.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-25.png" alt="client-logo"></a>
-				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-26.png" alt="client-logo"></a>
+		  <div class="client-logo-slider align-self-center align-middle">
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/andalan prima Indonesia.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/nur straits.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/indulexco.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/wika.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/JGC.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Elnusa.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Amarta.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Atelier.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/HIK.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Bintang.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Lapi.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Aecom.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/magna.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/MMP.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/mahacoal.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/MPK.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Mutiara.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/pertiwi.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/pgn.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/PP.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/quantus.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Rekateknik.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Royal.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Sumbawa.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Sumbawa – 1.jpg" alt="client-logo"></a>
+				<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/quantus – 1.jpg" alt="client-logo"></a>
 			</div>
 		</div>
 	</div>
 	  <!-- /clients -->
 
-	  <div class="section sec-news">
-		<div class="container">
-			<div class="row mb-5">
-				<div class="col-lg-6">
-					<h2 class="heading">News</h2>
-				</div>
-				<div class="col-lg-6">
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-lg-4 col-md-6 mb-4">
-					<div class="post-entry-1 h-100">
-						<a href="single.html">
-							<img src="images/img_3.jpg" alt="Image"
-							class="img-fluid">
-						</a>
-						<div class="post-entry-1-contents">
-							<span class="meta d-inline-block mb-0">July 17, 2019 <span class="mx-2">by</span> <a href="#">Admin</a></span>
-							<h2 class="mb-3"><a href="single.html">How Awesome Stay connected</a></h2>
-							
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="single.html">Read more</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6 mb-4">
-					<div class="post-entry-1 h-100">
-						<a href="single.html">
-							<img src="images/img_4.jpg" alt="Image"
-							class="img-fluid">
-						</a>
-						<div class="post-entry-1-contents">
-
-							<span class="meta d-inline-block mb-0">July 17, 2019 <span class="mx-2">by</span> <a href="#">Admin</a></span>
-							<h2 class="mb-3"><a href="single.html">We Need Unlimitted People</a></h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="single.html">Read more</a></p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-lg-4 col-md-6 mb-4">
-					<div class="post-entry-1 h-100">
-						<a href="single.html">
-							<img src="images/img_5.jpg" alt="Image"
-							class="img-fluid">
-						</a>
-						<div class="post-entry-1-contents">
-
-							<span class="meta d-inline-block mb-0">July 17, 2019 <span class="mx-2">by</span> <a href="#">Admin</a></span>
-							<h2 class="mb-3"><a href="single.html">Important of getting a notifications</a></h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							<p><a href="single.html">Read more</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	  
 
 
 	<div class="infos section" id="infos">
