--- a/index.html
+++ b/index.html
@@ -116,11 +116,7 @@
 				<div class="col-lg-5">
 					<h1 class="mb-2"><span>Quality</span> <span class="d-block">is the priority </span> <span class="d-block">of what we do in our business throughout the process</span></h1>
 
-					<div class="play-vid">
-						<a href="https://www.youtube.com/" class="play glightbox">
-							<span class="icon-play"></span>
-						</a>
-					</div>
+				
 
 					<div class="intro-desc">
 						<div class="line"></div>
@@ -372,32 +368,33 @@
 
 		<div class="section client">
 			<div class="container">
-			  <div class="client-logo-slider align-self-center">
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-1.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-2.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-4.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-5.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-6.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-7.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-8.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-9.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-10.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-11.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-12.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-13.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-14.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-15.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-16.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-17.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-18.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-19.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-20.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-21.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-22.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-23.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-24.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-25.png" alt="client-logo"></a>
-					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/clients-logo/client-26.png" alt="client-logo"></a>
+			  <div class="client-logo-slider align-self-center align-middle">
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/andalan prima Indonesia.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/nur straits.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/indulexco.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/wika.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/JGC.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Elnusa.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Amarta.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Atelier.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/HIK.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Bintang.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Lapi.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Aecom.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/magna.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/MMP.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/mahacoal.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/MPK.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Mutiara.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/pertiwi.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/pgn.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/PP.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/quantus.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Rekateknik.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Royal.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Sumbawa.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/Sumbawa – 1.jpg" alt="client-logo"></a>
+					<a class="text-center d-block outline-0 p-3"><img class="d-unset img-fluid" src="images/client/quantus – 1.jpg" alt="client-logo"></a>
 				</div>
 			</div>
 		</div>
