--- a/index.html
+++ b/index.html
@@ -56,23 +56,11 @@
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li class="has-children">
+					<li>
 						<a href="about.html">About</a>
-						<ul class="dropdown">
-							<li><a href="#">Commercial Building</a></li>
-							<li><a href="#">Cultural Lifestyle</a></li>
-							<li class="has-children">
-								<a href="#">Dropdown</a>
-								<ul class="dropdown">
-									<li><a href="#">Sub Menu One</a></li>
-									<li><a href="#">Sub Menu Two</a></li>
-									<li><a href="#">Sub Menu Three</a></li>
-								</ul>
-							</li>
-						</ul>
 					</li>
 					<li><a href="#">Services</a></li>
-					<li><a href="projects.html">Project</a></li>
+					<li><a href="projects.html">Project & Galery</a></li>
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 
@@ -139,7 +127,7 @@
 					<h2 class="heading">GOOD DECISIONS COME FROM EXPERIENCE.</h2>
 					<p> From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
 
-					<p><a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
+					<p><a href="about.html" class="more-2">Learn more <span class="icon-arrow_forward"></span></a></p>
 				</div>
 				<div class="col-lg-8 order-2 ms-auto" data-aos="fade-up" data-aos-delay="500">
 					<img src="images/about-us.jpg" alt="Image" class="img-fluid img-r" id="imageAbout">
@@ -152,11 +140,11 @@
 	<div class="section sec-4">
 		<div class="container" data-aos="fade-up" data-aos-delay="500">
 			<div class="row mb-5">
-				<div class="col-lg-6">
+				<div class="col-lg-4">
 					<h2 class="heading">Services</h2>
 				</div>
-				<div class="col-lg-4">
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
+				<div class="col-lg-8">
+					<p>NDS Engineering have successfully worked on many small and large-scale projects. Our team uses innovative and advancing technology in each project, whilst also keeping your needs at the forefront of their mind. Throughout the duration of each project, our team takes the time to understand your needs and communicates with you. Our projects have been commended on several occasions. This is because we provide superior service and pay attention to every detail.</p>
 				</div>
 			</div>
 			<div class="row g-5">
@@ -256,12 +244,10 @@
 	<div class="section sec-3 galery portfolio" id="portfolio">
 		<div class="container">
 			<div class="row mb-5">
-				<div class="col-lg-6">
-					<h2 class="heading">GALERY</h2>
+				<div class="col-lg-12" style="color: white;">
+					<h2 class="heading" style="font-size:36px;">Galery</h2>
 				</div>
-				<div class="col-lg-4">
-					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
-				</div>
+				
 			</div>
 			<div class="row" data-aos="fade-up" data-aos-delay="100">
 				<div class="col-lg-12 d-flex justify-content-center">
@@ -793,7 +779,7 @@
 				</div>
 			</div>
 			
-			<form class="row">
+			<form action="forms/contact.php" method="post" role="form" class="php-email-form row" id="contact">
 
 				<div class="col-md-6 col-lg-6">
 					<div class="mb-3">
@@ -837,6 +823,7 @@
 			</form>
 		</div>
 	</div>
+
 	
 
 	<div class="site-footer">
@@ -947,6 +934,7 @@
 	<script src="js/popper.js"></script>
 	<script src="js/burgermenu.js"></script>
 	<script src="js/project.js"></script>
+	<script src="js/php-email-form/validate.js"></script>
 
 
 	<script src="js/owl.carousel.min.js"></script>
