--- a/projects.html
+++ b/projects.html
@@ -52,23 +52,11 @@
 
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
-					<li class="has-children">
-						<a href="#">About</a>
-						<ul class="dropdown">
-							<li><a href="#">Commercial Building</a></li>
-							<li><a href="#">Cultural Lifestyle</a></li>
-							<li class="has-children">
-								<a href="#">Dropdown</a>
-								<ul class="dropdown">
-									<li><a href="#">Sub Menu One</a></li>
-									<li><a href="#">Sub Menu Two</a></li>
-									<li><a href="#">Sub Menu Three</a></li>
-								</ul>
-							</li>
-						</ul>
+					<li>
+						<a href="about.html">About</a>
 					</li>
 					<li><a href="#">Services</a></li>
-					<li><a href="#">Project & Galery</a></li>
+					<li><a href="projects.html">Project & Galery</a></li>
 					<li><a href="#">Contact Us</a></li>
 				</ul>
 
@@ -777,70 +765,7 @@
 			</div>
 		</div>
 	</div>
-
-
-	<div class="section">
-		<div class="container">
-			<div class="row border-bottom mb-5 pb-5 justify-content-between">
-				<div class="col-lg-4 align-self-center mb-5">
-					<span class="d-block subheading mb-3">We are committed</span>
-					<h2 class="heading mb-4">The road of success is always under construction</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-				</div>
-				<div class="col-lg-7">
-					<a href="https://www.youtube.com/watch?v=mwtbEGNABWU" class="video-wrap glightbox">
-						<span class="icon-play"></span>
-						<img src="images/img_4.jpg" alt="Image" class="img-fluid">
-					</a>
-				</div>
-			</div>
-			<div class="row g-5">
-				<div class="col-lg-4">
-
-					<div class="d-flex custom-card">
-						<div class="img">
-							<i class="flaticon-compass"></i>
-						</div>
-						<div class="text">
-							<h3 class="h6 fw-bold text-black">We provide best services</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
-							<p>
-								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="d-flex custom-card">
-						<div class="img">
-							<i class="flaticon-plan"></i>
-						</div>
-						<div class="text">
-							<h3 class="h6 fw-bold text-black">We provide best services</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
-							<p>
-								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div class="d-flex custom-card">
-						<div class="img">
-							<i class="flaticon-architect"></i>
-						</div>
-						<div class="text">
-							<h3 class="h6 fw-bold text-black">We provide best services</h3>
-							<p class="text-black-50">Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium.</p>
-							<p>
-								<a href="#" class="more-2">Learn more <span class="icon-arrow_forward"></span></a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 	
 
 	<div class="site-footer">
