--- a/index.html
+++ b/index.html
@@ -40,6 +40,52 @@
 	
 	</div>
 
+	<div class="menu-wrapper">
+		<div class="menu-switch">
+			<i class="icon-menu"></i>
+		</div>
+		<div class="menu-social-warp">
+			<div class="menu-social">
+				<a href="#"><span class="icon-facebook"></span></a>
+				<a href="#"><span class="icon-twitter"></span></a>
+				<a href="#"><span class="icon-instagram"></span></a>
+				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-linkedin"></span></a>
+			</div>
+		</div>
+	</div>
+	<div class="side-menu-wrapper">
+		<div class="sm-header">
+			<div class="menu-close">
+				<i class="icon-arrow-left"></i>
+			</div>
+			<a class="site-logo">
+				<img src="images/preloader.png" alt="">
+			</a>
+		</div>
+		<nav class="main-menu">
+			<ul>
+				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+		<div class="sm-footer">
+			<div class="sm-socail">
+				<a href="#"><span class="icon-facebook"></span></a>
+				<a href="#"><span class="icon-twitter"></span></a>
+				<a href="#"><span class="icon-instagram"></span></a>
+				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-linkedin"></span></a>
+			</div>
+			
+		</div>
+	</div>
+	<!-- Offcanvas Menu Section end -->
+
+
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
@@ -913,17 +959,6 @@
 		</div>
 	</div>
 
-
-	
-	<div class="social-icons">
-		<div class="d-flex flex-row flex-lg-column justify-content-center align-items-center h-100 mt-3 mt-lg-0 position-fixed">
-			<a class="btn m-3" target="_blank" href="https://api.whatsapp.com/send?phone=6281323322008"><i class="icon-whatsapp"></i></a>
-			<a class="btn m-3" target="_blank" href="https://www.facebook.com/NusaDinamikaSolusindo"><i class="icon-facebook"></i></a>
-			<a class="btn m-3" target="_blank" href="https://www.instagram.com/ndsengineering/"><i class="icon-instagram"></i></a>
-			<a class="btn m-3" target="_blank" href="https://www.linkedin.com/company/nusa-dinamika-solusindo/"><i class="icon-linkedin"></i></a>
-
-		</div>
-	</div>
 
 
 	<!-- jQuery -->
