--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,51 @@
 	
 	</div>
 
+	<div class="menu-wrapper">
+		<div class="menu-switch">
+			<i class="icon-menu"></i>
+		</div>
+		<div class="menu-social-warp">
+			<div class="menu-social">
+				<a href="#"><span class="icon-facebook"></span></a>
+				<a href="#"><span class="icon-twitter"></span></a>
+				<a href="#"><span class="icon-instagram"></span></a>
+				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-linkedin"></span></a>
+			</div>
+		</div>
+	</div>
+	<div class="side-menu-wrapper">
+		<div class="sm-header">
+			<div class="menu-close">
+				<i class="icon-arrow-left"></i>
+			</div>
+			<a class="site-logo">
+				<img src="images/preloader.png" alt="">
+			</a>
+		</div>
+		<nav class="main-menu">
+			<ul>
+				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="gallery.html">Gallery</a></li>
+				<li><a href="blog.html">Blog</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+		<div class="sm-footer">
+			<div class="sm-socail">
+				<a href="#"><span class="icon-facebook"></span></a>
+				<a href="#"><span class="icon-twitter"></span></a>
+				<a href="#"><span class="icon-instagram"></span></a>
+				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-linkedin"></span></a>
+			</div>
+			
+		</div>
+	</div>
+	<!-- Offcanvas Menu Section end -->
+
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
 			<div class="site-mobile-menu-close">
