--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
 				<a href="#"><span class="icon-facebook"></span></a>
 				<a href="#"><span class="icon-twitter"></span></a>
 				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-whatsapp"></span></a>
 				<a href="#"><span class="icon-linkedin"></span></a>
 			</div>
 		</div>
@@ -79,7 +79,7 @@
 				<a href="#"><span class="icon-facebook"></span></a>
 				<a href="#"><span class="icon-twitter"></span></a>
 				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-whatsapp"></span></a>
 				<a href="#"><span class="icon-linkedin"></span></a>
 			</div>
 			
@@ -147,7 +147,7 @@
 
 	<div class="hero-2 overlay" style="background-image: url('images/Hero/About\ Hero.jpg');">
 		<div class="container">
-			<div class="row align-items-center">
+			<div class="row align-items-center" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-lg-5">
 					<h1 class="mb-2"><span>NDS Engineering believes there are four important elements in construction design projects</span></h1>
 
@@ -169,7 +169,7 @@
 
 	<div class="section sec-1 about about2" id="about">
 		<div class="container">
-			<div class="row g-0 mt-5">
+			<div class="row g-0 mt-5" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-lg-8 order-1">
 					<h2 class="heading">PT. NUSA DINAMIKA SOLUSINDO ENGINEERING</h2>
 					<p>The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area. From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia.</p>
@@ -182,7 +182,7 @@
 
 	<div class="section philosophy">
 		<div class="container">
-			<div class="row border-bottom mb-5 pb-5 justify-content-between">
+			<div class="row border-bottom mb-5 pb-5 justify-content-between" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-lg-10 align-self-center mb-5">
 					<span class="d-block subheading mb-3">OUR PHILOSOPHY</span>
 					<h2 class="heading mb-4">NDS Engineering believes there are four important elements in construction design projects</h2>
@@ -190,7 +190,7 @@
 				</div>
 
 			</div>
-			<div class="row g-5 col-lg-12">
+			<div class="row g-5 col-lg-12" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-lg-6">
 
 					<div class="d-flex custom-card">
@@ -256,7 +256,7 @@
 					<p>Delectus voluptatum distinctio quos eius excepturi sunt pariatur, aut, doloribus officia ea molestias beatae laudantium, quam odio ipsum veritatis est maiores velit quasi blanditiis et natus accusamus itaque.</p>
 				</div>
 			</div>
-			<div class="row g-5">
+			<div class="row g-5" data-aos="fade-up" data-aos-delay="500">
 				<div class="col-lg-4">
 
 					<div class="d-flex custom-card">
@@ -353,7 +353,7 @@
 
 		<div class="timeline-carousel section">
 			<div class="container">
-			   <div class="row">
+			   <div class="row" data-aos="fade-up" data-aos-delay="500">
 				  <div class="col-12 col-lg-8 offset-2 text-center mb-5">
 					 <h1>HISTORY</h1>
 					 <p><a class="text-white" target="_blank">From this background, NDS Engineering is expected to be the solution of dynamic construction problems in Indonesia. The diversity of the Indonesian nation formed by the large number of tribes who live in the territory of Indonesia and spread across various islands and regions across Indonesia. Therefore each tribe has its own characteristics on social and cultural aspects. When associated in the field of construction, special handling is required in each region to accommodate the cultural aspects of the area.</p>
@@ -361,7 +361,7 @@
 				  </div>
 			   </div>
 			</div>
-			<div class="timeline-carousel__item-wrapper" data-js="timeline-carousel">
+			<div class="timeline-carousel__item-wrapper" data-js="timeline-carousel" data-aos="fade-up" data-aos-delay="500">
 			   
 			   <!--Timeline item-->
 			   <div class="timeline-carousel__item">
