--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<a href="#"><span class="icon-facebook"></span></a>
 				<a href="#"><span class="icon-twitter"></span></a>
 				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-whatsapp"></span></a>
 				<a href="#"><span class="icon-linkedin"></span></a>
 			</div>
 		</div>
@@ -77,7 +77,7 @@
 				<a href="#"><span class="icon-facebook"></span></a>
 				<a href="#"><span class="icon-twitter"></span></a>
 				<a href="#"><span class="icon-instagram"></span></a>
-				<a href="#"><span class="icon-dribbble"></span></a>
+				<a href="#"><span class="icon-whatsapp"></span></a>
 				<a href="#"><span class="icon-linkedin"></span></a>
 			</div>
 			
@@ -100,15 +100,7 @@
 			<div class="site-navigation">
 				<a href="index.html" class="logo m-0 float-start">Nusa Dinamika Solusindo<span class="text-primary">.</span> </a>
 
-				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li>
-						<a href="about.html">About</a>
-					</li>
-					<li><a href="#">Services</a></li>
-					<li><a href="projects.html">Project & Galery</a></li>
-					<li><a href="#">Contact Us</a></li>
-				</ul>
+			
 
 				
 
